# codenames-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  REQUIREMENTS.md  pyproject.toml
docs/: development-workflow.md  project-plan.md  requirements-specification.md  test-plan.md  word-validation-strategy.md
scripts/: .precommit_coverage_check.py  conftest.py  precommit_test_and_coverage.py
tests/: test_dummy.py
