[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", "__pycache__", "scripts", "docs", ".pytest_cache"]
addopts = "--import-mode=importlib"

[tool.poetry]
package-mode = false
name = "codenames-mcp"
version = "0.1.0"
description = "A standalone Model Context Protocol (MCP) server that implements a complete Codenames game experience with LLM sampling and human elicitation support"
authors = ["Victor Ek <victor.ek@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TomMRiddle/codenames-mcp"
repository = "https://github.com/TomMRiddle/codenames-mcp"
keywords = ["MCP", "Codenames", "LLM", "Game", "Server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
mcp = {extras = ["cli"], version = ">=1.12.4,<2.0.0"}
fastmcp = ">=2.11.3,<3.0.0"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.3.2"
pytest = "^8.4.1"
black = "^24.0.0"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
pre-commit = "^4.3.0"
pytest-cov = "^6.2.1"

[tool.poetry.extras]
dev = ["robotframework", "pytest", "black", "flake8", "flake8-black"]

[tool.poetry.requires-plugins]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "python -m src"
test = "pytest tests"
format = "black src tests"
lint = "flake8 src tests"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
    (.*_pb2.py)
'''

